apps/openwebui/openwebui/templates/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: openwebui
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-gateway
  hostnames:
   - "ai.tomekz.party"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: open-webui
      port: 80
